<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/cardview_recipes_item"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  app:cardCornerRadius="10dp"
  app:cardElevation="5dp"
  app:cardUseCompatPadding="true"
  >
...
      android:id="@+id/guideline"
      android:layout_width="9dp"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.25"/>
    <ImageView
      android:id="@+id/img_favorite_heart"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
...
