<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">>
  <string name="app_name">BakingX</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="serving">Serving</string>
  <string name="bking_ingredients">BKING INGREDIENTS</string>
  <string name="ingredients_list">INGREDIENTS LIST</string>
  <string name="check_internet">Please Check Internet Connection!!!</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="appwidget_text">FAVORITE RECIPE WIDGET</string>
  <string name="add_widget">Add widget</string>
...
