...
      android:paddingLeft="4dp"
      android:paddingRight="4dp"
      android:includeFontPadding="false"
      android:textColor="#FFBEBEBE"/>

    <FrameLayout
      android:id="@+id/exo_fullscreen_button"
      android:layout_width="32dp"
      android:layout_height="32dp"
      android:layout_gravity="right">

      <ImageView
        android:id="@+id/exo_fullscreen_icon"
...
